--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         * Chamada construtor NewsFeed
         */
         var feed = new NewsFeed();
-        feed.init();
+        feed.init("feeds-container");
 
     </script>
 </body>
